# kp-front

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  index.html  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  railway.json  vite.config.ts
backend/: .env.example  .gitignore  README.md  alembic.ini  checklists.manifest.example.json  config.example.json  geodata.manifest.example.json  objects.manifest.example.json  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_revoked_tokens.py  a3b4c5d6e7f9_capture_secret.py  a7b8c9d0e1f2_personnel_rank.py  a9b0c1d2e3f4_stt_jobs.py  (+18 more)
backend/app/: admin_checklists.py  admin_config.py  admin_geodata.py  admin_objects.py  alarms.py  audio.py  audit.py  config.py  database.py  demo_export.py  demo_reset.py  divera.py  dump_openapi.py  fake_scenario.py  gen_vapid.py  geo_util.py  geocode.py  gzip_request.py  i18n.py  kroki.py  main.py  models.py  personnel.py  providers.py  push.py  report_pdf.py  reset_roster.py  scheduler.py  schemas.py  seed.py  seed_config.py  seed_reference.py  seed_users.json  spa.py  storage.py  traccar.py  weather.py  webhooks.py
backend/tests/: conftest.py  smoke_auth.py  smoke_incidents.py  test_admin_auth.py  test_admin_checklists.py  test_admin_geodata.py  test_admin_only_access.py  test_alarm_intake.py  test_audit_chain.py  test_auth_pin.py  test_capture.py  test_config_branding.py  test_demo_data.py  test_demo_guard.py  test_demo_reset.py  test_diag.py  test_divera_attach.py  test_divera_webhook.py  test_error_handler.py  test_exercise.py  test_fake_scenario.py  test_gzip.py  test_health.py  test_incident_integration.py  test_journal.py  test_kroki.py  test_media.py  test_milestones.py  test_peaks.py  test_personnel_roster.py  test_personnel_sync.py  test_plan_scales.py  test_print_relay.py  test_push.py  test_replay_reconstruction.py  test_report_pdf.py  test_stats.py  test_stt.py  test_system.py  test_token_blocklist_persistence.py  (+4 more)
(+453 files in other folders)
